--- a/충청남도_도시재생지원센터/resources/css/reset.css
+++ b/충청남도_도시재생지원센터/resources/css/reset.css
@@ -7,7 +7,7 @@ small, strike, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset
 figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {margin:0;padding:0;border:0;vertical-align:baseline;}
 html, body, div, applet, object, iframe,p, blockquote, pre, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {font-weight:300; font-family:'NotoKrR', '돋움', dotum, Helvetica, sans-serif; color:#212121; letter-spacing:0px; -webkit-text-size-adjust:100%; font-size:13px;}
+figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {font-weight:300; font-family:'NotoKrR', '돋움', dotum, Helvetica, sans-serif; color:#212121; letter-spacing:0px; -webkit-text-size-adjust:100%; font-size:14px;}
 h1, h2, h3, h4, h5, h6, label{margin:0; padding:0; border:0; vertical-align:baseline; font-weight:300; font-family:'NotoKrR', '돋움', dotum, Helvetica, sans-serif; font-weight:bold; color:#212121; letter-spacing:0px;}
 
 /* HTML5 display-role reset for older browsers */
@@ -19,7 +19,7 @@ blockquote:before, blockquote:after,q:before, q:after {content:''; content:none;
 table {border-collapse:collapse; border-spacing:0;}
 caption {width:0; height:0; visibility:hidden; line-height:0; font-size:0; overflow:hidden;}
 a,a:visited,a:hover,a:active{text-decoration:none; color:#212121;}
-input, select, textarea, button {margin:0; padding:0; letter-spacing:-1px; font-weight:300; font-family:'NotoKrR', '돋움', dotum, Helvetica, sans-serif;}
+input, select, textarea, button {margin:0; padding:0; letter-spacing:-1px; font-weight:300; font-family: 'NotoKrR', '돋움', dotum, Helvetica, sans-serif;}
 button {margin:0; padding:0; background:none; border:none; cursor:pointer;}
 
 @font-face {
@@ -49,6 +49,14 @@ src: url(../font/NotoSans-Bold.eot?#iefix) format('embedded-opentype'),
 url(../font/NotoSans-Bold.woff2) format('woff2'),
 url(../font/NotoSans-Bold.woff) format('woff');
 }
+
+@font-face {
+    font-family: 'yg-jalnan';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 /*skip 메뉴*/
 #skipArea, #skipArea ul {height:0; width:100%}
