--- a/PC/css/_new/orderandpay.css
+++ b/PC/css/_new/orderandpay.css
@@ -8,6 +8,8 @@
 
 */
 /* ---------- common_style --------------*/
+.orderandpay {font-family: 'NS','Apple SD Gothic Neo', sans-serif; font-size:14px;}
+.orderandpay .only_english {font-family: 'GS','Apple SD Gothic Neo', sans-serif !important;}
 
 .orderandpay {}
 .orderandpay h2.tit {font-size: 40px; margin-top:48px; font-weight: 700;}
@@ -16,7 +18,8 @@
 .orderandpay .width_check {max-width: 520px;}
 .orderandpay .width_phone {max-width: 80px;}
 .orderandpay .width_name {max-width: 190px;}
-.orderandpay .width_address {max-width: 400px;width: 4000px !important;}
+.orderandpay .width_point {max-width: 240px; width:240px !important; text-align: right;}
+.orderandpay .width_address {max-width: 400px;width: 400px !important;}
 .orderandpay .width_email {max-width: 140px; width:140px !important;}
 .orderandpay .input_wrap select.width_phone,
 .orderandpay .select_wrap select.width_phone  {width: 80px !important;}
@@ -27,7 +30,10 @@
 .orderandpay .user_info_wrap .user_title:after {content: ''; display:block; clear:both;}
 
 /* 기본 박스 타이틀 안에 글자 있을때 */
+.orderandpay .have_inner_txt {position: relative;}
 .orderandpay .have_inner_txt:after {content: ''; display:block; clear:both;}
+
+.orderandpay .have_inner_txt.address .btn_defalut {position: absolute; top:0; left:404px;}
 .orderandpay .user_info_wrap .user_title.have_inner_txt .i_txt,
 .orderandpay .user_info_wrap .user_title.have_inner_txt .i_small_txt,
 .orderandpay .user_info_wrap .user_title.have_inner_txt .choice_wrap {float: left;}
@@ -38,6 +44,16 @@
 .orderandpay .choice_wrap.type_squre.have_inner_txt .choice_wrap_inner {float: left;}
 
 .orderandpay .user_info_wrap .user_title.have_inner_txt .i_small_txt {font-size: 14px; font-weight: 400;}
+
+.orderandpay .have_inner_txt.inner_float {}
+
+/* text */
+.orderandpay .order_txt {font-size: 16px;font-weight: 400;color:#000;}
+.orderandpay .user_table_wrap .order_txt {;padding-bottom: 10px; margin-top:30px;}
+.orderandpay .ft_big {font-size: 22px !important; font-weight: 700 !important;}
+
+/* table_inner_txt */
+.orderandpay .table_wrap .text_wrap {font-size: 14px; color:#999999; display: block; letter-spacing: .5px;}
 
 /*--- 아이콘 --*/
 /* 화살표 */
@@ -57,9 +73,15 @@
 .orderandpay .table_wrap th span {color:#DA2128;}
 .orderandpay .table_wrap td {padding: 10px 0px 10px 24px;font-size: 14px;font-weight: 500;height:38px;border-bottom: 1px #EEEEEE solid;}
 
-/* 주문상품 */
-.orderandpay .table_wrap.bbs_list_v2 th, .orderandpay .table_wrap.bbs_list_v2 td {text-align: center;}
-.orderandpay .table_wrap.bbs_list_v2 tfoot th, .orderandpay .table_wrap.bbs_list_v2 tfoot td {text-align:right; font-size: 22px; font-weight: 500;}
+/* 주문상품 _table  */
+.orderandpay .table_wrap.bbs_list_v2 th, .orderandpay .table_wrap.bbs_list_v2 td {text-align: center;padding-right: 10px;padding-left: 10px;}
+.orderandpay .table_wrap.bbs_list_v2 tfoot th, .orderandpay .table_wrap.bbs_list_v2 tfoot td {text-align:right;font-size: 22px;font-weight: 500;border-bottom: 0;}
+
+/* 제휴포인트_table*/
+.orderandpay .table_wrap.type_1 {}
+.orderandpay .table_wrap.type_1 th {background: #fff; text-align: left;}
+.orderandpay .table_wrap.type_1 .btn_defalut.squre {margin-left:-1px;}
+
 
 /* radio , checkbox 원형 */
 .orderandpay .choice_wrap .choice_wrap_inner {margin-left:30px; font-size:14px; font-weight: 500;}
@@ -106,136 +128,74 @@
 .orderandpay .inner_float .choice_wrap_inner {margin-top: 11px; margin-left: 20px;}
 .orderandpay .inner_float .btn_defalut {float: left;}
 
-
-.orderandpay .inner_float_dot .input_wrap {float: left; margin-left: 3px; line-height: 35px;}
-.orderandpay .inner_float_dot .input_wrap:first-child {margin-left: 0;}
-.orderandpay .inner_float_dot .input_wrap._last {margin-left:10px;}
-
-/* btn */
-.btn_defalut {padding: 10px 16px;height:38px;background: #EEEEEE;font-size: 13px;font-weight: 700;color:#FFFFFF;outline:none;color: #000;border-radius: 30px;}
-
-.alert_txt {font-size: 13px; font-weight: 400; color: #777777}
-.alert_txt span {font-size: inherit; font-weight: inherit;}
-
-.user_title .i_small_txt {font-size: 14px; color:#777777; font-weight: 400;}
-.user_title .i_small_txt span {font-size: inherit; color:#000; font-weight: 500;}c@charset "utf-8";
-
-/* font-weight: 100 ~ 900 
-	300: Light
-	400: Regular
-	500: Medium
-	700: bold
-
-*/
-/* ---------- common_style --------------*/
-
-.orderandpay {}
-.orderandpay h2.tit {font-size: 40px; margin-top:48px; font-weight: 700;}
-
-.orderandpay .distance {margin-top:100px;}
-.orderandpay .width_check {max-width: 520px;}
-.orderandpay .width_phone {max-width: 80px;}
-.orderandpay .width_name {max-width: 190px;}
-.orderandpay .width_address {max-width: 400px;width: 4000px !important;}
-.orderandpay .width_email {max-width: 140px; width:140px !important;}
-.orderandpay .input_wrap select.width_phone,
-.orderandpay .select_wrap select.width_phone  {width: 80px !important;}
-
-/* 기본 박스 */
-.orderandpay .user_info_wrap {margin-top:50px;}
-.orderandpay .user_info_wrap .user_title {font-size: 22px; font-weight: 700; padding-bottom:10px; border-bottom: 2px #000 solid;}
-.orderandpay .user_info_wrap .user_title:after {content: ''; display:block; clear:both;}
-
-/* 기본 박스 타이틀 안에 글자 있을때 */
-.orderandpay .have_inner_txt:after {content: ''; display:block; clear:both;}
-.orderandpay .user_info_wrap .user_title.have_inner_txt .i_txt,
-.orderandpay .user_info_wrap .user_title.have_inner_txt .i_small_txt,
-.orderandpay .user_info_wrap .user_title.have_inner_txt .choice_wrap {float: left;}
-.orderandpay .user_info_wrap .user_title.have_inner_txt .choice_wrap {margin-left:36px;}
-.orderandpay .user_info_wrap .user_title.have_inner_txt .i_small_txt {margin-top: 8px; margin-left: 10px;}
-
-.orderandpay .choice_wrap.type_squre.have_inner_txt .i_txt,
-.orderandpay .choice_wrap.type_squre.have_inner_txt .choice_wrap_inner {float: left;}
-
-.orderandpay .user_info_wrap .user_title.have_inner_txt .i_small_txt {font-size: 14px; font-weight: 400;}
-
-/*--- 아이콘 --*/
-/* 화살표 */
-.orderandpay .icon_arrow {display: inline-block; margin-left:20px; font-size: 14px; font-weight: 500;}
-.orderandpay .icon_arrow:after {content:'';display:inline-block;width:6px;height: 12px;background: url(../../images/_new/icon_arrow.png) no-repeat 0 0;margin-left:5px;margin-bottom: -1px;}
-
-/* 안내 */
-.orderandpay .icon_question {font-size: 0; display: block; float: right; width:18px; height:18px; border:1px #999999 solid; border-radius: 100%; background: url(../../images/_new/icon_question.png) no-repeat 6px 0px; box-sizing: border-box; margin-left:5px;}
-.orderandpay .icon_question:after {content: ''; display: block; clear:both;}
-
-
-/* table */
-/* 기본형 */
-.orderandpay .table_wrap {/* margin-top: 15px; */}
-.orderandpay .table_wrap th, .orderandpay .table_wrap td {text-align: left; font-size:14px; font-weight: 500;}
-.orderandpay .table_wrap th {font-size: 13px;font-weight: 500;background: #FAFAFA;text-align: center;border-bottom: 1px #EEEEEE solid;}
-.orderandpay .table_wrap th span {color:#DA2128;}
-.orderandpay .table_wrap td {padding: 10px 0px 10px 24px;font-size: 14px;font-weight: 500;height:38px;border-bottom: 1px #EEEEEE solid;}
-
-/* 주문상품 */
-.orderandpay .table_wrap.bbs_list_v2 th, .orderandpay .table_wrap.bbs_list_v2 td {text-align: center;}
-.orderandpay .table_wrap.bbs_list_v2 tfoot th, .orderandpay .table_wrap.bbs_list_v2 tfoot td {text-align:right; font-size: 22px; font-weight: 500;}
-
-/* radio , checkbox 원형 */
-.orderandpay .choice_wrap .choice_wrap_inner {margin-left:30px; font-size:14px; font-weight: 500;}
-.orderandpay .choice_wrap .choice_wrap_inner:first-child {margin-left:0;}
-.orderandpay .choice_wrap input[type="checkbox"],
-.orderandpay .choice_wrap input[type=radio] {  position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip:rect(0,0,0,0); border: 0 }
-.orderandpay .choice_wrap input[type="checkbox"] + label ,
-.orderandpay .choice_wrap input[type=radio]+ label { display: inline-block; position: relative; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
-.orderandpay .choice_wrap input[type="checkbox"] + label:before,
-.orderandpay .choice_wrap input[type="radio"] + label:before { content: ' '; display: inline-block; width: 20px; height: 20px; line-height: 20px; margin: -2px 8px 0 0; text-align: center; vertical-align: middle; background: #EEEEEE url(../../images/_new/icon_radio_on.png) no-repeat center center;; border: 1px solid #DBDBDB; border-radius : 10px;  box-sizing: border-box;} 
-/*필요시 입력
-.orderandpay .choice_wrap input[type="checkbox"] + label:active:before, 
-.orderandpay .choice_wrap input[type="checkbox"]:checked + label:active:before,
-.orderandpay .choice_wrap input[type="radio"] + label:active:before, 
-.orderandpay .choice_wrap input[type="radio"]:checked + label:active:before  { } */
-
-.orderandpay .choice_wrap input[type="checkbox"]:checked + label:before,
-.orderandpay .choice_wrap input[type="radio"]:checked + label:before  { border:1px #DA2128 solid; background: #DA2128 url(../../images/_new/icon_radio_on.png) no-repeat center center;}
-.orderandpay .choice_wrap input[type=radio]::-ms-expand,
-.orderandpay .choice_wrap input[type=checkbox]::-ms-expand{    display: none;}
-
-/* radio , checkbox 사각형 */
-.orderandpay .choice_wrap.type_squre input[type="checkbox"] + label:before,
-.orderandpay .choice_wrap.type_squre input[type="radio"] + label:before { content: ' '; display: inline-block; width: 20px; height: 20px; line-height: 20px; margin: -2px 5px 0 0; text-align: center; vertical-align: middle; background: #EEEEEE url(../../images/_new/icon_radio_on.png) no-repeat center center;; border: 1px solid #DBDBDB; border-radius : 4px;  box-sizing: border-box;} 
-.orderandpay .choice_wrap.type_squre input[type="checkbox"]:checked + label:before,
-.orderandpay .choice_wrap.type_squre input[type="radio"]:checked + label:before  { border:1px #DA2128 solid; background: #DA2128 url(../../images/_new/icon_radio_on.png) no-repeat center center;}
-
-
-/* input 기본형 */
-.orderandpay .input_wrap input {padding: 10px 10px 11px;border: 1px #B5B5B5 solid;box-sizing: border-box;font-size: 13px;font-weight: 400;display: block;width: 100%;color:#777777;}
-
-/* select 기본형 */
-.orderandpay .select_wrap select ,
-.orderandpay .input_wrap select {width:100%; padding: 9px 32px 10px 7px; max-height:38px; border:1px #B5B5B5 solid;box-sizing: border-box;font-size: 13px;font-weight: 300;display: block; color:#777777;font-family: inherit;background: url('../../images/_new/icon_select.png') no-repeat right 12px center;border-radius: 0px;-webkit-appearance: none;-moz-appearance: none;appearance: none;}
-.orderandpay .input_wrap select::-ms-expand ,
-.orderandpay .select_wrap select::-ms-expand {display: none;}
-
-
-/* input 및 unit 개수 추가 시 */
-.orderandpay .inner_float .input_wrap {float: left; position: relative; margin-left: 30px;}
-.orderandpay .inner_float .input_wrap:first-child {margin-left: 0;}
-.orderandpay .inner_float .input_wrap:before {content: '';display: block;position: absolute;top: 50%;left: -20px;width:10px;height: 1px;background: #707070;}
-.orderandpay .inner_float .input_wrap:first-child:before {content: '';display: none;}
-.orderandpay .inner_float .choice_wrap_inner {margin-top: 11px; margin-left: 20px;}
-.orderandpay .inner_float .btn_defalut {float: left;}
+.orderandpay .inner_float .text_wrap {margin-left: 14px; margin-top:12px; float: left;} 
 
 
 .orderandpay .inner_float_dot .input_wrap {float: left; margin-left: 3px; line-height: 35px;}
 .orderandpay .inner_float_dot .input_wrap:first-child {margin-left: 0;}
 .orderandpay .inner_float_dot .input_wrap._last {margin-left:10px;}
 
+
 /* btn */
-.btn_defalut {padding: 10px 16px;height:38px;background: #EEEEEE;font-size: 13px;font-weight: 700;color:#FFFFFF;outline:none;color: #000;border-radius: 30px;}
+.orderandpay .btn_type_wrap {text-align: center;}
+.orderandpay .btn_defalut {padding: 10px 19px;height:auto;background: #EEEEEE;font-size: 13px;font-weight: 700;color:#FFFFFF;outline:none;color: #000;border-radius: 30px;}
+.orderandpay .btn_defalut.squre {background: #fff; height: auto;font-size: 14px;font-weight: 400;outline:none;color: #000;border:1px #B5B5B5 solid;border-radius: 0;/* max-width: 120px; */text-align: center;min-width: 120px;box-sizing: border-box;padding: 11px 10px}
+.orderandpay button.btn_defalut.squre {padding: 10px 20px;height:38px; font-family: 'font_ns'; line-height: inherit;}
 
-.alert_txt {font-size: 13px; font-weight: 400; color: #777777}
-.alert_txt span {font-size: inherit; font-weight: inherit;}
+.orderandpay .btn_basic {padding: 21px 20px;height:auto;background: #000;font-size: 18px;font-weight: 400;color:#FFFFFF;min-width: 320px;}
+.orderandpay .bottom_wrap {margin-top: 140px;}
 
-.user_title .i_small_txt {font-size: 14px; color:#777777; font-weight: 400;}
-.user_title .i_small_txt span {font-size: inherit; color:#000; font-weight: 500;}
+/* text */
+.orderandpay .alert_txt {font-size: 13px; font-weight: 400; color: #777777}
+.orderandpay .alert_txt span {font-size: inherit; font-weight: inherit;}
+
+.orderandpay .user_title .i_small_txt {font-size: 14px; color:#777777; font-weight: 400;}
+.orderandpay .user_title .i_small_txt span {font-size: inherit; color:#000; font-weight: 500;}
+
+/* 주문 상품 */
+.orderandpay .tit01 {font-size: 16px; font-weight: 400; color:#000;margin-top: 35px;}
+.orderandpay .text_show {font-size: 18px;text-align: center;border:1px #DBDBDB solid;border-radius: 30px;padding: 20px 94px;display: inline-block;}
+.orderandpay .text_show_wrap {margin-top:40px; text-align: center;}
+
+.orderandpay .help_box_wrap {background: #FAFAFA;padding: 8px 20px; margin-top: 40px;}
+.orderandpay .help_box_wrap .text_list li {font-size: 13px;font-weight:400;color:#777777;position: relative;padding-left: 10px;margin: 12px 0;}
+.orderandpay .help_box_wrap .text_list li:before {content: '';display: block;width:5px;height:1px;background: #777777;position: absolute;left: 0;top: 6px;}
+
+/* 결제금액 */
+.orderandpay .user_price_wrap {background: #FAFAFA; padding:40px; margin-top: 30px;}
+.orderandpay .user_price_wrap:after {content: ''; display: block; clear: both;}
+.orderandpay .user_price_wrap .user_price_unit {background: #fff;padding: 46px 70px;float: left;margin-left:10px;}
+.orderandpay .user_price_wrap .user_price_unit:first-child {margin-left:0;}
+.orderandpay .user_price_wrap .user_price_unit .color {color: #777777;}
+.orderandpay .user_price_wrap .price_unit_list:after {content: ''; display: block; clear: both;}
+.orderandpay .user_price_wrap .price_unit_list dt, 
+.orderandpay .user_price_wrap .price_unit_list dd {float: left;padding:8px 0;margin: 0 60px;min-width: 80px;}
+.orderandpay .user_price_wrap .price_unit_list dt {font-size: 16px; font-weight:500; color:#000;}
+.orderandpay .user_price_wrap .price_unit_list dd {font-size: 16px;font-weight:400;text-align: right;}
+
+.orderandpay .user_price_wrap .user_price_unit.sum {padding: 51px 59px 57px;}
+.orderandpay .user_price_wrap .user_price_unit .unit_sum_tit {font-size: 16px;font-weight:700;text-align: center;}
+.orderandpay .user_price_wrap .user_price_unit .unit_sum {font-size: 18px;font-weight:500;margin-top: 13px;text-align: center;}
+.orderandpay .user_price_wrap .user_price_unit .unit_sum .only_english {font-size: 28px; font-weight:700;}
+.orderandpay .user_price_wrap .user_price_unit .unit_sum_point {border-top:1px #B5B5B5 solid; margin-top: 22px;text-align: center;padding: 18px 20px 0;}
+
+/* 결제방법 */
+.orderandpay .user_pay_wrap {}
+
+/* tab */
+.tab_wrap {}
+.tab_list  {margin-top:20px; margin-left: -10px;}
+.tab_list:after {content:''; display:block; clear:both;}
+.tab_list .items {float: left;min-width: 180px;margin-left: 12px;margin-top: 10px;}
+.tab_list .items .link {display: block;vertical-align: middle;padding: 13px 10px;font-size:18px;font-weight:400;color:#000;position: relative;text-align: center;border: 2px #DBDBDB solid;border-radius: 24px;}
+.tab_layer_wrap {position: relative; margin-top:20px;}
+.tab_layer { position: absolute; top:0px; display: block; height: auto;}
+.tab_layer.is_active {display: block;}
+.tab_list li.is_active .link {background: #DD1016; border-color: #DD1016; color:#fff;}
+
+.tab_layer .tab_layer_text_box {background: #FAFAFA; padding:30px;}
+
+.tab_layer .tab_layer_text_box .layer_title {font-size: 16px; font-weight: 500}
+.tab_layer .tab_layer_text_box .layer_txt_list {margin-top: 15px;}
+.tab_layer .tab_layer_text_box .layer_txt_list li {font-size: 13px;font-weight:400;position: relative;margin:10px 0;padding-left: 10px;}
+.tab_layer .tab_layer_text_box .layer_txt_list li:before {content:'';display: block;width: 3px;height:3px;background: #777777;position: absolute;top:6px;left:0;border-radius: 100%;}
